@@ -365,6 +365,8 @@
     <Compile Include="Framework\ActiveRecordValidator.cs" />
     <Compile Include="Framework\ActiveRecordHooksValidationBase.cs" />
     <Compile Include="Framework\ActiveRecordValidationException.cs" />
+    <Compile Include="Framework\Config\DefaultDatabaseConfiguration.cs" />
+    <Compile Include="Framework\Config\DatabaseType.cs" />
     <Compile Include="Framework\Config\DefaultFlushType.cs" />
     <Compile Include="Framework\AbstractNHContributor.cs" />
     <Compile Include="Framework\NHSearchContributor.cs" />
